switch data source to geojson via arcgis server. add functionality to add jobs to matching zip code elements

--- a/src/styles/zip-list.css
+++ b/src/styles/zip-list.css
@@ -1,5 +1,7 @@
 .zip-list {
-    width: 50%;
+    font-family: "Times New Roman", Times, serif;
+    width: 31%;
     text-align: center;
-    color: blue;
+    color: black;
+    z-index: 1;
 }
