--- a/src/styles/job-list.css
+++ b/src/styles/job-list.css
@@ -6,35 +6,20 @@
     display: none;
 }
 
-.job-title {
-    padding-bottom: 0;
-    margin-bottom: 0;
-}
-
-.employer {
-    margin-top: 0;
-    padding-top: 0;
-}
-
-.ft-pt {
-    margin-top: 0;
-    padding-top: 0;
-}
-
-.co-number {
-    padding-bottom: 0;
-    margin-bottom: 0;
-}
-
-.job-container {
-    border-bottom-style: solid;
-    border-bottom-color: black;
-    border-bottom-width: 1
-}
-
 .job-list-container {
     padding: 0;
     margin: 0;
     color: blue;
-    justify-content: space-between;
+    overflow: auto;
 }
+
+.job-container {
+    background-color: rgba(38, 63, 106, .2);
+    color: rgba(38, 63, 106, 1);
+    padding: 4px;
+    margin-bottom: 3px;
+}
+
+
+
+
