add header and reset button (not functional)

--- a/src/styles/zip-list.css
+++ b/src/styles/zip-list.css
@@ -4,6 +4,7 @@
     font-family: "Open Sans";
     width: 31vw;
     height: 100%;
+    top: 40px;
     color: black;
     position: fixed;
     overflow: auto;
