--- a/src/styles/job-list.css
+++ b/src/styles/job-list.css
@@ -15,6 +15,7 @@
 
 .job-container {
     background-color: rgba(38, 63, 106, .2);
+    border-radius: 2px;
     color: rgba(38, 63, 106, 1);
     padding: 4px;
     margin-bottom: 3px;
