--- a/src/styles/zip-list.css
+++ b/src/styles/zip-list.css
@@ -14,6 +14,7 @@
 .zip-title {
     color: rgba(38, 63, 106, 1);
     background-color: #D1DFD6;
+    border-radius: 2px;
     text-align: center;
     padding: 15px;
 }
